--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -2,14 +2,17 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: ingress-backend-app
+  annotations:
+    nginx.ingress.kubernetes.io/use-regex: "true"
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
   ingressClassName: nginx
   rules:
     - host: arch.homework
       http:
         paths:
-          - path: /
-            pathType: Prefix
+          - path: /(otusapp/.+/|)(.*)
+            pathType: ImplementationSpecific
             backend:
               service:
                 name: backend-app
