k8s files (readiness and liveness probes)

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -19,3 +19,14 @@ spec:
           image: dmoleynik0307/backend-app:latest
           ports:
             - containerPort: 8000
+          livenessProbe:
+            tcpSocket:
+              port: 8000
+            initialDelaySeconds: 15
+            periodSeconds: 10
+          readinessProbe:
+            httpGet:
+              path: /health
+              port: 8000
+            initialDelaySeconds: 15
+            periodSeconds: 10
