Migration and DB final

--- a/k8s/helm/postgresql-values.yaml
+++ b/k8s/helm/postgresql-values.yaml
@@ -2,5 +2,6 @@ global:
   postgresql:
     auth:
       username: backend
-      password: vdOX2We5DCSpeGo9
       database: backend-app
+      existingSecret: postgresql-db-pass
+      secretKeys.userPasswordKey: password
