--- a/k8s/helm/backend-app/values.yaml
+++ b/k8s/helm/backend-app/values.yaml
@@ -24,10 +24,6 @@ ingress:
         - path: /(otusapp/.+/|)(.*)
           pathType: ImplementationSpecific
 
-configMap:
-  db_url: "jdbc:postgresql://postgresql:5432/backend-app"
-  db_username: "backend"
-
 env:
   - name: SPRING_DATASOURCE_URL
     valueFrom:
@@ -44,6 +40,34 @@ env:
       secretKeyRef:
         name: postgresql-db-pass
         key: password
+
+migrationJob:
+  name: backend-migration
+  namespace: default
+  labels:
+    app: backend-migration
+  annotations:
+    "helm.sh/hook": pre-install,pre-upgrade
+    "helm.sh/hook-weight": "-1"
+    "helm.sh/hook-delete-policy": before-hook-creation
+  spec:
+    containerName: backend-migration
+    image: dmoleynik0307/backend-migration
+    env:
+      - name: LIQUIBASE_COMMAND_URL
+        value: "jdbc:postgresql://postgresql:5432/backend-app"
+      - name: LIQUIBASE_COMMAND_USERNAME
+        value: "backend"
+      - name: LIQUIBASE_COMMAND_PASSWORD
+        valueFrom:
+          secretKeyRef:
+            name: postgresql-db-pass
+            key: password
+    restartPolicy: Never
+
+configMap:
+  db_url: "jdbc:postgresql://postgresql:5432/backend-app"
+  db_username: "backend"
 
 livenessProbe:
   tcpSocket:
