--- a/k8s/helm/backend-app/templates/ingress.yaml
+++ b/k8s/helm/backend-app/templates/ingress.yaml
@@ -25,7 +25,7 @@ spec:
               service:
                 name: {{ $fullName }}
                 port:
-                  name: http
+                  name: {{ .servicePortName }}
           {{- end }}
     {{- end }}
 {{- end }}
