--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -6,3 +6,7 @@ databaseChangeLog:
   - include:
       file: 001-create-users.sql
       relativeToChangelogFile: true
+
+  - include:
+      file: 002-add-users-encrypted-password.sql
+      relativeToChangelogFile: true
