Token validation + access check for getting profile

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 		<java.version>17</java.version>
 		<kotlin.version>1.9.23</kotlin.version>
 		<liquibase.version>4.27.0</liquibase.version>
+		<jsonwebtoken.version>0.12.5</jsonwebtoken.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -68,6 +69,24 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-api</artifactId>
+			<version>${jsonwebtoken.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-jackson</artifactId>
+			<version>${jsonwebtoken.version}</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-impl</artifactId>
+			<version>${jsonwebtoken.version}</version>
+			<scope>runtime</scope>
 		</dependency>
 	</dependencies>
 
