Prepare helm template for sharing with other services

--- a/k8s/helm/backend-app/templates/job-migration.yaml
+++ b/k8s/helm/backend-app/templates/job-migration.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.migrationJob.enabled -}}
 apiVersion: batch/v1
 kind: Job
 metadata:
@@ -20,3 +21,4 @@ spec:
             {{- toYaml . | nindent 12 }}
           {{- end }}
       restartPolicy: {{ .Values.migrationJob.spec.restartPolicy }}
+{{- end }}
