--- a/k8s/helm/backend-app/templates/config-map.yaml
+++ b/k8s/helm/backend-app/templates/config-map.yaml
@@ -1,9 +1,10 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "backend-app.fullname" . }}
+  name: {{ include "app.fullname" . }}
   labels:
-    {{- include "backend-app.labels" . | nindent 4 }}
+    {{- include "app.labels" . | nindent 4 }}
 data:
-  db-url: {{ .Values.configMap.db_url }}
-  db-username: {{ .Values.configMap.db_username }}
+  {{- with .Values.configMap }}
+  {{- toYaml . | nindent 2 }}
+  {{- end }}
