--- a/k8s/helm/backend-app/templates/service.yaml
+++ b/k8s/helm/backend-app/templates/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "backend-app.fullname" . }}
+  name: {{ include "app.fullname" . }}
   labels:
-    {{- include "backend-app.labels" . | nindent 4 }}
+    {{- include "app.labels" . | nindent 4 }}
 spec:
   selector:
-    {{- include "backend-app.selectorLabels" . | nindent 4 }}
+    {{- include "app.selectorLabels" . | nindent 4 }}
   ports:
     - port: {{ .Values.service.port }}
       targetPort: {{ .Values.service.targetPort }}
