--- a/k8s/helm/backend-app/values.yaml
+++ b/k8s/helm/backend-app/values.yaml
@@ -3,7 +3,7 @@ replicaCount: 2
 image:
   repository: dmoleynik0307/backend-app
   pullPolicy: IfNotPresent
-  tag: 2.0.0
+  tag: 2.0.3
 
 podLabels: { }
 
@@ -13,17 +13,7 @@ service:
   port: 80
 
 ingress:
-  enabled: true
-  className: nginx
-  annotations:
-    nginx.ingress.kubernetes.io/use-regex: "true"
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
-  hosts:
-    - host: arch.homework
-      paths:
-        - path: /(otusapp/.+/|)(.*)
-          pathType: ImplementationSpecific
-          servicePortName: http
+  enabled: false
 
 env:
   - name: SPRING_DATASOURCE_URL
