--- a/k8s/helm/backend-app/templates/config-map.yaml
+++ b/k8s/helm/backend-app/templates/config-map.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.configMap.enabled -}}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -5,6 +6,7 @@ metadata:
   labels:
     {{- include "app.labels" . | nindent 4 }}
 data:
-  {{- with .Values.configMap }}
+  {{- with .Values.configMap.props }}
   {{- toYaml . | nindent 2 }}
   {{- end }}
+{{- end }}
